<resources>
	<string name="app_name">Heroes Of Calculus</string>
	<string name="default_tvCalculus_text" translatable="false">2 + 2 = ?</string>
	<string name="default_answer1" translatable="false">3</string>
	<string name="default_answer2" translatable="false">4</string>
	<string name="default_answer3" translatable="false">5</string>
	<string name="default_answer4" translatable="false">6</string>
	<string name="outcome_victory">Victory!</string>
	<string name="outcome_defeat">Defeat!</string>
	<string name="try_again">Try Again</string>
	<string name="opt_2" translatable="false">2</string>
	<string name="opt_3" translatable="false">3</string>
	<string name="opt_4" translatable="false">4</string>
	<string name="opt_5" translatable="false">5</string>
	<string name="opt_6" translatable="false">6</string>
	<string name="opt_7" translatable="false">7</string>
	<string name="opt_8" translatable="false">8</string>
	<string name="opt_9" translatable="false">9</string>
</resources>