<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleActivity">

    <TextView
        android:id="@+id/txtCalculus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_tvCalculus_text"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/default_tvCalculus_text" />

    <Button
        android:id="@+id/btnAnwser1"
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_answer1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCalculus"
        tools:text="@string/default_answer1" />

    <Button
        android:id="@+id/btnAnwser2"
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_answer2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnAnwser1"
        app:layout_constraintTop_toBottomOf="@+id/txtCalculus"
        tools:text="@string/default_answer2" />

    <Button
        android:id="@+id/btnAnwser3"
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_answer3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnAnwser2"
        app:layout_constraintTop_toBottomOf="@+id/txtCalculus"
        tools:text="@string/default_answer3" />

    <Button
        android:id="@+id/btnAnwser4"
        android:layout_width="73dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/default_answer4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnAnwser3"
        app:layout_constraintTop_toBottomOf="@+id/txtCalculus"
        tools:text="@string/default_answer4" />

</androidx.constraintlayout.widget.ConstraintLayout>